--- a/assignment/index.html
+++ b/assignment/index.html
@@ -17,7 +17,7 @@
     </header>
     <div id="container">
       <div class="note">
-        <div>
+        <div>t
           In addition to passing tests, we will be looking
           for <strong><pre>console.log()</pre></strong> after each question.
           Right click on the page and select 'Inspect' to
